Replace deprecated constructors with valueOf(String)